elastic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-fleet
  annotations:
    cert-manager.io/cluster-issuer: "stefanmuraru-com-issuer"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
    external-dns.alpha.kubernetes.io/hostname: fleet.monitoring.stefanmuraru.com
spec:
  ingressClassName: private
  tls:
    - hosts:
        - fleet.monitoring.stefanmuraru.com
      secretName: monitoring-fleet-server-tls
  rules:
    - host: fleet.monitoring.stefanmuraru.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-fleet-server-agent-http
                port:
                  number: 8220
